Bugfix/ie10 (#88)
* add ie10 to browserlist

* stylefix to have spacebetween items in header for ie10

* spacing

* input overflow bug

* fix tags overflowing in expanded accordian

* make span inline

* add more space

* fix user header

* email regex

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,10 +8,12 @@
 
   &--link {
     text-decoration: none;
+    display: inline-block;
   }
 
   @include for-tablet-down {
     justify-content: center !important;
+    -ms-flex-pack: justify !important;
     background-color: $light-grey;
   }
 
@@ -112,6 +114,7 @@
 
   &--link {
     color: $white;
+    display: inline-block;
 
     button {
       color: $white;
